--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demoOpenai
 
 #chat key
-spring.ai.openai.api-key=${GEMINI_KEY}
-spring.ai.openai.chat.base-url=${BASE_URL}
+spring.ai.openai.api-key=${GEMINI_KEY:}
+spring.ai.openai.chat.base-url=${BASE_AND_URL:}
 
 #chat model
-spring.ai.openai.chat.options.model=${GEMINI_MODEL}
+spring.ai.openai.chat.options.model=${GEMINI_MODEL:}
 
