--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,19 @@ spring.ai.openai.chat.base-url=${BASE_AND_URL:}
 #chat model
 spring.ai.openai.chat.options.model=${GEMINI_MODEL:}
 
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-ai-demo
+spring.datasource.username=${POSTGRES_USER:}
+spring.datasource.password=${POSTGRES_PASSWORD:}
+spring.datasource.driver-class-name=org.postgresql.Driver
+#JPA-Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings = true
+spring.jpa.properties.hibernate.show.sql = true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hb2dll.auto = update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.ai.chat.memory.repository.jdbc.initialize-schema=always
