--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: postgres:17.5
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: ${POSTGRESQL_USER:}
+      POSTGRES_PASSWORD: ${POSTGRESQL_PASSWORD:}
     ports:
       - "5432:5432"
